force-app/main/default/objects/Product_Detail_Service__c/Product_Detail_Service__c.object-meta.xml
<CustomObject>
    <label>Product Detail Service</label>
    <nameField>
        <displayFormat>PK-{0000}</displayFormat>
        <label>Product Detail Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Detail Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>