force-app/main/default/objects/Product_Detail_Service__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Detail Services (Product Session)</relationshipLabel>
    <relationshipName>Product_Detail_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>