force-app/main/default/objects/Product_Detail_Service__c/fields/Product_Service_Package__c.field-meta.xml
<CustomField>
    <fullName>Product_Service_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Service Package</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Service package</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Detail Services</relationshipLabel>
    <relationshipName>Product_Detail_Services</relationshipName>
    <type>Lookup</type>
</CustomField>